feat(renderer): 添加引力透镜方向配置支持
- 在客户端配置中添加 lensDirection 参数用于控制透镜方向
- 更新着色器程序将多个单独的黑洞性质统一为 vec4 数组
- 实现凹凸透镜效果：正值为凸透镜(向中心吸引)，负值为凹透镜(远离中心)
- 修改事件视界渲染逻辑仅对凸透镜生效
- 更新投影矩阵计算以支持透镜方向参数
- 添加新的本地化字符串资源用于透镜方向配置项